fixed overflow

--- a/css/_extension.scss
+++ b/css/_extension.scss
@@ -2,7 +2,7 @@
   .container {
     margin-top: 100px;
     @include breakpoint(medium) {
-      margin-top: 50px;
+      margin-top: 20px;
     }
   }
   .extension-body {
